--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -1,4 +1,3 @@
-
 {% extends "layouts/base-fullscreen.html" %}
 
 {% block title %} Login {% endblock title %}
@@ -7,10 +6,10 @@
 
 {% block content %}
 
-    <div class="d-n@sm- peer peer-greed h-100 pos-r bgr-n bgpX-c bgpY-c bgsz-cv" style='background-image: url("/static/assets/static/images/bg.jpg")'>
+    <div class="d-n@sm- peer peer-greed h-100 pos-r bgr-n bgpX-c bgpY-c bgsz-cv" style='background-image: url("{{ ASSETS_ROOT }}/static/images/bg.jpg")'>
         <div class="pos-a centerXY">
           <div class="bgc-white bdrs-50p pos-r" style="width: 120px; height: 120px;">
-            <img class="pos-a centerXY" src="/static/assets/static/images/logo.png" alt="">
+            <img class="pos-a centerXY" src="{{ ASSETS_ROOT }}/static/images/logo.png" alt="">
           </div>
         </div>
       </div>
@@ -18,7 +17,7 @@
 
         <h3 class="fw-300 c-grey-900 mB-40">
           <a target="_blank" rel="noopener noreferrer" 
-             href="https://appseed.us/admin-dashboards/django-dashboard-adminator">Fulusi Dashboard </a> - Login
+             href="https://appseed.us/admin-dashboards/django-dashboard-adminator">Django Dashboard Adminator</a> - Login
         </h3>
 
         {% if msg %}
@@ -29,7 +28,7 @@
             </p>
         {% endif %}
 
-        <form method="post" >
+        <form method="post" action="">
 
           {% csrf_token %}
 
@@ -51,8 +50,8 @@
                 <button type="submit" name="login" class="btn btn-primary">Login</button>
                 
                 &nbsp; &nbsp; 
-                <!-- <span class="text-small font-weight-semibold">Not a member?</span>  -->
-                <!-- <a href="{% url 'login' %}" class="text-black text-small">Register</a> -->
+                <span class="text-small font-weight-semibold">Not a member?</span> 
+                <a href="{% url 'register' %}" class="text-black text-small">Register</a>
               </div>
             </div>
           </div>
@@ -61,3 +60,4 @@
     </div>  
 
 {% endblock content %}
+
