--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -1,4 +1,3 @@
-
 {% extends "layouts/base-fullscreen.html" %}
 
 {% block title %} Register {% endblock title %}
@@ -7,10 +6,10 @@
 
 {% block content %}
 
-      <div class="peer peer-greed h-100 pos-r bgr-n bgpX-c bgpY-c bgsz-cv" style='background-image: url("/static/assets/static/images/bg.jpg")'>
+      <div class="peer peer-greed h-100 pos-r bgr-n bgpX-c bgpY-c bgsz-cv" style='background-image: url("{{ ASSETS_ROOT }}/static/images/bg.jpg")'>
         <div class="pos-a centerXY">
           <div class="bgc-white bdrs-50p pos-r" style="width: 120px; height: 120px;">
-            <img class="pos-a centerXY" src="/static/assets/static/images/logo.png" alt="">
+            <img class="pos-a centerXY" src="{{ ASSETS_ROOT }}/static/images/logo.png" alt="">
           </div>
         </div>
       </div>
@@ -18,7 +17,7 @@
       
         <h3 class="fw-300 c-grey-900 mB-40">
           <a target="_blank" rel="noopener noreferrer" 
-             href="https://appseed.us/admin-dashboards/django-dashboard-adminator">Django Dashboard Adminator</a> - Register
+             href="https://appseed.us/admin-dashboards/django-dashboard-adminator">Django Dashboard Adminator</a> - Login
         </h3>
 
         {% if msg %}
@@ -35,32 +34,41 @@
 
           <div class="form-group">
             <label class="text-normal text-dark">Username</label>
-            <input type="text" name="username" class="form-control" placeholder="Enter username">
-
+            {{ form.username }}
           </div>
           <span class="text-error">{{ form.username.errors }}</span>
 
           <div class="form-group">
-            <label class="text-normal text-dark">phoneNumber</label>
-            <input type="text" name="phoneNumber" class="form-control" placeholder="Enter phoneNumber">
+            <label class="text-normal text-dark">eMail Address</label>
+            {{ form.email }}
           </div>
           <span class="text-error">{{ form.email.errors }}</span>
 
           <div class="form-group">
             <label class="text-normal text-dark">Password</label>
-            <input type="text" name="password" class="form-control" placeholder="Enter password">
-          
+            {{ form.password1 }}
           </div>
           <span class="text-error">{{ form.password1.errors }}</span>
-          <div class="form-group">
-            <button type="submit" name="register" class="btn btn-primary">Register</button> 
 
-            &nbsp; &nbsp;
-            <span class="text-small font-weight-semibold">Have and account?</span>
-            <a href="{% url 'login' %}" class="text-black text-small">Login</a>    
+          <div class="form-group">
+            <label class="text-normal text-dark">Password</label>
+            {{ form.password2 }}
+          </div>
+          <span class="text-error">{{ form.password2.errors }}</span>
+
+          <div class="form-group">
+            
+
+            
+            <button  class="btn btn-primary" href="{% url 'home/index.html' %}" >Login</button> 
+            
+            
+            <!-- <a href="{% url 'home' %}" class="text-black text-small">Register</a>    -->
           </div>
 
         </form>
       </div>
 
 {% endblock content %}
+
+
